# Multi-Model-ETA-Prediction

./: .gitignore  analyze_large_deviations.py  baselines.py  build_route_graph.py  eval_ensemble.py  eval_underestimation.py  generate_analysis_plots.py  generate_figures.py  generate_soft_targets.py  inference.py  preprocess_data.py  pyproject.toml  rebuild_memmap.py  run_ensemble.sh  run_exp_cont.sh  run_experiments.sh  run_gcn_xgboost.py  run_reviewer_ablations.sh  run_selfdistill.sh  train_eta.py  train_mstgn.py  train_ppo_corrector.py
ACM/: main (1).tex
ETA-paper/: main.tex
src/: data_processor.py
src/informer/: __init__.py  attention.py  embed.py  model.py  utils.py
src/mstgn/: __init__.py  model.py
